--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Hélios</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -20,6 +23,13 @@
             <li><a href="#" id="icone-panier" class="fa-solid fa-cart-shopping"></a></li>
         </ul>
     </nav>
+
+    <div id="countdown-container">
+
+         <h2>Prochain Drop : Ardent I et Embrasement II.</h2>
+         <div id="countdown-big"></div>
+
+    </div>
 
     <h1 class="produits_texte"> Notre collection : Temporairement Indisponible... </h1>
     <section class="section_produits">
