--- a/index.html
+++ b/index.html
@@ -35,14 +35,21 @@
     <section class="section_produits">
         <div class="produits">
             <div class="carte">
-                <div class="img"><img src="logo2.JPEG"></div>
-                <div class="desc">T-Shirt De Compression</div>
-                <div class="titre">Ardent I</div>
-                <div class="box">
-                    <div class="prix">??€</div>
-                    <button class="achat" data-name="Ardent I" data-price="18€">Ajouter au panier</button>
-                </div>
-            </div>
+    <div class="carousel" data-images='["ardent1.png","ardent2.png"]'>
+        <img class="carousel-img" src="ardent1.png">
+        <button class="carousel-btn left">❮</button>
+        <button class="carousel-btn right">❯</button>
+        <div class="dots"></div>
+    </div>
+
+    <div class="desc">T-Shirt De Compression</div>
+    <div class="titre">Ardent I</div>
+    <div class="box">
+        <div class="prix">??€</div>
+        <button class="achat" data-name="Ardent I" data-price="18€">Ajouter au panier</button>
+       </div>
+    </div>
+
 
             <div class="carte">
                 <div class="img"><img src="logo2.JPEG"></div>
