--- a/index.html
+++ b/index.html
@@ -51,8 +51,29 @@
     </div>
 
 
+    <div class="carte">
+    <div class="carousel" data-images='["ardent1_longsleeves.PNG","ardent2_longsleeves.PNG"]'>
+        <img class="carousel-img" src="ardent1_longsleeves.png">
+        <button class="carousel-btn left">❮</button>
+        <button class="carousel-btn right">❯</button>
+        <div class="dots"></div>
+    </div>
+                <div class="desc">T-Shirt De Compression</div>
+                <div class="titre">Ardent I : Spécial EDITION</div>
+                <div class="box">
+                    <div class="prix">??€</div>
+                    <button class="achat" data-name="Ardent I LongSleeves" data-price="20€">Ajouter au panier</button>
+                </div>
+            </div>
+
+
             <div class="carte">
-                <div class="img"><img src="logo2.JPEG"></div>
+    <div class="carousel" data-images='["embrasement1.PNG","embrasement2.PNG"]'>
+        <img class="carousel-img" src="embrasement1.PNG">
+        <button class="carousel-btn left">❮</button>
+        <button class="carousel-btn right">❯</button>
+        <div class="dots"></div>
+    </div>
                 <div class="desc">Pump Cover</div>
                 <div class="titre">Embrasement II</div>
                 <div class="box">
@@ -61,15 +82,6 @@
                 </div>
             </div>
 
-            <div class="carte">
-                <div class="img"><img src="logo2.JPEG"></div>
-                <div class="desc">Débardeur</div>
-                <div class="titre">Lumos III</div>
-                <div class="box">
-                    <div class="prix">??€</div>
-                    <button class="achat" data-name="Lumos III" data-price="15€">Ajouter au panier</button>
-                </div>
-            </div>
 
             <div class="carte">
                 <div class="img"><img src="logo2.JPEG"></div>
@@ -104,7 +116,7 @@
     </section>
 
     <footer>
-        <p>Copyrights<a href="#"> Hélios Store</a></p>
+        <p>Copyrights<a href="mentions-legales.html"> Hélios Store</a></p>
     </footer>
 
 <div id="panier" class="panier">
