--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
 
     <div class="carte">
-    <div class="carousel" data-images='["ardent1_longsleeves.PNG","ardent2_longsleeves.PNG"]'>
-        <img class="carousel-img" src="ardent1_longsleeves.png">
+    <div class="carousel" data-images='["long_sleeves1.PNG","long_sleeves2.PNG"]'>
+        <img class="carousel-img" src="long_sleeves1.png">
         <button class="carousel-btn left">❮</button>
         <button class="carousel-btn right">❯</button>
         <div class="dots"></div>
@@ -62,7 +62,7 @@
                 <div class="titre">Ardent I : Spécial EDITION</div>
                 <div class="box">
                     <div class="prix">??€</div>
-                    <button class="achat" data-name="Ardent I LongSleeves" data-price="20€">Ajouter au panier</button>
+                    <button class="achat" data-name="Ardent I Long Sleeves" data-price="20€">Ajouter au panier</button>
                 </div>
             </div>
 
