--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
     <div class="carte">
-    <div class="carousel" data-images='["long_sleeves1.PNG","long_sleeves2.PNG"]'>
+    <div class="carousel" data-images='["long_sleeves1.png","long_sleeves2.png"]'>
         <img class="carousel-img" src="long_sleeves1.png">
         <button class="carousel-btn left">❮</button>
         <button class="carousel-btn right">❯</button>
